<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="contact">Contact</string>
    <string name="info">Info</string>
    <string name="about_description">Android implementation of the KeePass password manager.</string>
    <string name="accept">Accept</string>
    <string name="add_entry">Add entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="add_group">Add group</string>
    <string name="master_key">Vault password</string>
    <string name="security">Security</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_algorithm">Encryption algorithm</string>
    <string name="key_derivation_function">Key derivation function</string>
    <string name="app_timeout">Timeout</string>
    <string name="app_timeout_summary">Idle time before locking the database</string>
    <string name="application">App</string>
    <string name="brackets">Brackets</string>
    <string name="extended_ASCII">Extended ASCII</string>
    <string name="file_manager_install_description">A file manager that accepts the ACTION_CREATE_DOCUMENT and ACTION_OPEN_DOCUMENT intent action is required to create, open, and save database files.</string>
    <string name="allow">Allow</string>
    <string name="clipboard_cleared">Clipboard cleared</string>
    <string name="clipboard_error_title">Clipboard error</string>
    <string name="clipboard_error">Some devices won\'t let apps use the clipboard.</string>
    <string name="clipboard_error_clear">Could not clear clipboard</string>
    <string name="clipboard_timeout">Clipboard timeout</string>
    <string name="clipboard_timeout_summary">Duration of storage in the clipboard (if supported by your device)</string>
    <string name="clipboard_otp_notifications_title">OTP notification</string>
    <string name="clipboard_otp_notifications_summary">Open a notification to copy the OTP from entries populated with autofill or magikeyboard</string>
    <string name="content_description_background">Background</string>
    <string name="content_description_open_file">Open file</string>
    <string name="content_description_node_children">Node children</string>
    <string name="content_description_add_node">Add node</string>
    <string name="content_description_add_entry">Add entry</string>
    <string name="content_description_add_group">Add group</string>
    <string name="content_description_add_item">Add item</string>
    <string name="content_description_file_information">File info</string>
    <string name="content_description_password_checkbox">Password checkbox</string>
    <string name="content_description_keyfile_checkbox">Keyfile checkbox</string>
    <string name="content_description_hardware_key_checkbox">Hardware key checkbox</string>
    <string name="content_description_repeat_toggle_password_visibility">Repeat toggle password visibility</string>
    <string name="content_description_entry_icon">Entry icon</string>
    <string name="content_description_database_color">Database color</string>
    <string name="content_description_entry_foreground_color">Entry foreground color</string>
    <string name="content_description_entry_background_color">Entry background color</string>
    <string name="content_description_nav_header">Navigation header</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="validate">Validate</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="entry_password_generator">Password generator</string>
    <string name="content_description_password_length">Password length</string>
    <string name="content_description_passphrase_word_count">Passphrase word count</string>
    <string name="entry_add_field">Add field</string>
    <string name="entry_add_attachment">Add attachment</string>
    <string name="content_description_remove_field">Remove field</string>
    <string name="content_description_update_from_list">Update</string>
    <string name="content_description_remove_from_list">Remove</string>
    <string name="content_description_keyboard_close_fields">Close fields</string>
    <string name="content_description_share_url">Share URL</string>
    <string name="select_to_copy">Select to copy %1$s to clipboard</string>
    <string name="retrieving_db_key">Retrieving database key…</string>
    <string name="waiting_challenge_request">Waiting for the challenge request…</string>
    <string name="waiting_challenge_response">Waiting for the challenge response…</string>
    <string name="database">Database</string>
    <string name="template_group_name">Templates</string>
    <string name="decrypting_db">Decrypting database content…</string>
    <string name="default_checkbox">Use as default database</string>
    <string name="digits">Digits</string>
    <string name="entry_accessed">Accessed</string>
    <string name="entry_cancel">Cancel</string>
    <string name="entry_notes">Notes</string>
    <string name="entry_confpassword">Confirm password</string>
    <string name="entry_created">Created</string>
    <string name="entry_expires">Expires</string>
    <string name="expired">Expired</string>
    <string name="entry_UUID">UUID</string>
    <string name="entry_history">History</string>
    <string name="entry_attachments">Attachments</string>
    <string name="entry_keyfile">Keyfile</string>
    <string name="hardware_key">Hardware key</string>
    <string name="entry_modified">Modified</string>
    <string name="searchable">Searchable</string>
    <string name="inherited">Inherit</string>
    <string name="auto_type">Auto-Type</string>
    <string name="auto_type_sequence">Auto-Type sequence</string>
    <string name="entry_not_found">Could not find entry data.</string>
    <string name="entry_password">Password</string>
    <string name="entry_application_id">App Id</string>
    <string name="tags">Tags</string>
    <string name="custom_data">Custom data</string>
    <string name="save">Save</string>
    <string name="entry_title">Title</string>
    <string name="entry_setup_otp">Set up one-time password</string>
    <string name="otp_type">OTP type</string>
    <string name="otp_secret">Secret</string>
    <string name="otp_period">Period (seconds)</string>
    <string name="otp_counter">Counter</string>
    <string name="otp_digits">Digits</string>
    <string name="search_filters">Search filters</string>
    <string name="otp_algorithm">Algorithm</string>
    <string name="current_group">Current group</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="regex">Regular expression</string>
    <string name="debit_credit_card">Debit / Credit Card</string>
    <string name="holder">Holder</string>
    <string name="number">Number</string>
    <string name="card_verification_value">CVV</string>
    <string name="personal_identification_number">PIN</string>
    <string name="id_card">ID Card</string>
    <string name="name">Name</string>
    <string name="place_of_issue">Place of issue</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="wireless">Wi-Fi</string>
    <string name="ssid">SSID</string>
    <string name="type">Type</string>
    <string name="cryptocurrency">Cryptocurrency wallet</string>
    <string name="token">Token</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="seed">Seed</string>
    <string name="account">Account</string>
    <string name="bank">Bank</string>
    <string name="bank_name">Bank name</string>
    <string name="bank_identifier_code">SWIFT / BIC</string>
    <string name="international_bank_account_number">IBAN</string>
    <string name="secure_note">Secure Note</string>
    <string name="membership">Membership</string>
    <string name="standard">Standard</string>
    <string name="template">Template</string>
    <string name="version">Version</string>
    <string name="entry_otp">OTP</string>
    <string name="entry_url">URL</string>
    <string name="entry_user_name">Username</string>
    <string name="error_arc4">The Arcfour stream cipher is not supported.</string>
    <string name="error_can_not_handle_uri">Could not handle this URI in KeePassDX.</string>
    <string name="error_file_not_create">Could not create file.</string>
    <string name="error_invalid_db">Could not read the database.</string>
    <string name="error_invalid_path">Make sure the path is correct.</string>
    <string name="error_invalid_OTP">Invalid OTP secret.</string>
    <string name="error_no_name">Enter a name.</string>
    <string name="error_word_reserved">This word is reserved and cannot be used.</string>
    <string name="error_nokeyfile">Select a keyfile.</string>
    <string name="error_no_hardware_key">Select a hardware key.</string>
    <string name="error_out_of_memory">No memory to load your entire database.</string>
    <string name="error_XML_malformed">XML malformed.</string>
    <string name="error_load_database">Could not load the database.</string>
    <string name="error_load_database_KDF_memory">Could not load the key. Try to lower the KDF \"Memory Usage\".</string>
    <string name="error_pass_gen_type">At least one password generation type must be selected.</string>
    <string name="error_disallow_no_credentials">At least one credential must be set.</string>
    <string name="error_vault_password_required">Enter a Vault password.</string>
    <string name="error_pass_match">The passwords do not match.</string>
    <string name="error_rounds_too_large">\"Transformation rounds\" too high. Setting to 2147483648.</string>
    <string name="error_string_key">Each string must have a field name.</string>
    <string name="error_label_exists">This label already exists.</string>
    <string name="error_wrong_length">Enter a positive integer number in the \"Length\" field.</string>
    <string name="error_autofill_enable_service">Could not enable autofill service.</string>
    <string name="error_move_group_here">You cannot move a group here.</string>
    <string name="error_move_entry_here">You cannot move an entry here.</string>
    <string name="error_copy_entry_here">You cannot copy an entry here.</string>
    <string name="error_copy_group_here">You cannot copy a group here.</string>
    <string name="error_create_database">Unable to create database file.</string>
    <string name="auto_focus_search_title">Quick search</string>
    <string name="auto_focus_search_summary">Request a search when opening a database</string>
    <string name="general">General</string>
    <string name="user_verification">User Verification</string>
    <string name="user_verification_device_credential_title">User Verification credential</string>
    <string name="user_verification_device_credential_summary">Use the device credential as user verification if available</string>
    <string name="delete_entered_password_title">Delete password</string>
    <string name="delete_entered_password_summary">Deletes the password entered after a connection attempt to a database</string>
    <string name="enable_auto_save_database_title">Autosave database</string>
    <string name="enable_auto_save_database_summary">Save the database after every important action (in \"Modifiable\" mode)</string>
    <string name="enable_keep_screen_on_title">Keep screen on</string>
    <string name="enable_keep_screen_on_summary">Keep the screen on when watching or editing an entry</string>
    <string name="enable_screenshot_mode_title">Screenshot mode</string>
    <string name="enable_screenshot_mode_summary">Allow third party apps to record or take screenshots of the app</string>
</resources>