<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2019 Jeremy Jamet / Kunzisoft.
     
 This file is part of KeePassDX.

  KeePassDX is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  KeePassDX is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDX.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <SwitchPreferenceCompat
            android:key="@string/delete_entered_password_key"
            android:title="@string/delete_entered_password_title"
            android:summary="@string/delete_entered_password_summary"
            android:defaultValue="@bool/delete_entered_password_default"/>
        <SwitchPreferenceCompat
            android:key="@string/enable_auto_save_database_key"
            android:title="@string/enable_auto_save_database_title"
            android:summary="@string/enable_auto_save_database_summary"
            android:defaultValue="@bool/enable_auto_save_database_default"/>
        <SwitchPreferenceCompat
            android:key="@string/auto_focus_search_key"
            android:title="@string/auto_focus_search_title"
            android:summary="@string/auto_focus_search_summary"
            android:defaultValue="@bool/auto_focus_search_default"/>
        <SwitchPreferenceCompat
            android:key="@string/enable_keep_screen_on_key"
            android:title="@string/enable_keep_screen_on_title"
            android:summary="@string/enable_keep_screen_on_summary"
            android:defaultValue="@bool/enable_keep_screen_on_default"/>
        <SwitchPreferenceCompat
            android:key="@string/enable_screenshot_mode_key"
            android:title="@string/enable_screenshot_mode_title"
            android:summary="@string/enable_screenshot_mode_summary"
            android:defaultValue="@bool/enable_screenshot_mode_key_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/user_verification">

        <SwitchPreferenceCompat
            android:key="@string/user_verification_device_credential_key"
            android:title="@string/user_verification_device_credential_title"
            android:summary="@string/user_verification_device_credential_summary"
            android:defaultValue="@bool/user_verification_device_credential_default"/>

    </PreferenceCategory>

</PreferenceScreen>
